--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+    <variable
+        name="viewModel"
+        type="com.cartrack.users.ui.home.userlist.UserListViewModel" />
+    </data>
 
 <FrameLayout
     android:layout_width="match_parent"
@@ -33,6 +38,5 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 </FrameLayout>
+</layout>
