--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorEmailLink">#4476C3</color>
+    <color name="colorPhoneLink">#FF0000</color>
+    <color name="colorGray">#d3d3d3</color>
+    <color name="colorWhite">#FFFFFF</color>
+
 </resources>
