--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="medium_margin" value ="16dp"/>
+    <dimen name="small_margin" value ="8dp"/>
 
 
 </resources>
