--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/usersFragment"
         android:name="com.cartrack.users.ui.home.userlist.UserListFragment"
-        android:label="Characters"
+        android:label="Users"
         tools:layout="@layout/fragment_user_list" >
         <action
             android:id="@+id/action_userFragment_to_userDetailFragment"
@@ -18,7 +18,7 @@
     <fragment
         android:id="@+id/userDetailsFragment"
         android:name="com.cartrack.users.ui.home.userdetail.UserDetailsFragment"
-        android:label="Character Detail"
+        android:label="User Detail"
         tools:layout="@layout/fragment_user_details" />
 
 </navigation>
