--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="medium_margin" value ="16dp"/>
-    <dimen name="small_margin" value ="8dp"/>
+    <dimen name="medium_margin">16dp </dimen>
+    <dimen name="small_margin">8dp</dimen>
+    <dimen name="very_small_margin">4dp</dimen>
+    <dimen name="txt_big_size">22sp</dimen>
 
 
 </resources>
