--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -82,6 +82,7 @@
         android:layout_height="wrap_content"
         android:src="@android:drawable/ic_dialog_email"
         android:tint="@color/colorPhoneLink"
+        android:onClick="@{() -> viewModel.onclickEmail(viewModel.userDetail.email)}"
         android:layout_marginTop="@dimen/medium_margin"
         app:layout_constraintEnd_toStartOf="@+id/button3"
         app:layout_constraintStart_toEndOf="@id/button1"
