--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,6 +19,17 @@
         android:id="@+id/userDetailsFragment"
         android:name="com.cartrack.users.ui.home.userdetail.UserDetailsFragment"
         android:label="User Detail"
-        tools:layout="@layout/fragment_user_details" />
+        tools:layout="@layout/fragment_user_details" >
+        <action
+            android:id="@+id/action_userDetailFragment_to_webViewFragment"
+            app:destination="@id/webViewFragment" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/webViewFragment"
+        android:name="com.cartrack.users.ui.webview.WebViewFragment"
+        android:label="WebSite"
+        tools:layout="@layout/fragment_web_view" />
 
 </navigation>
