--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,8 +2,11 @@
 <resources>
     <dimen name="medium_margin">16dp </dimen>
     <dimen name="small_margin">8dp</dimen>
+    <dimen name="small_margin_between_views">4dp</dimen>
     <dimen name="very_small_margin">4dp</dimen>
     <dimen name="txt_big_size">22sp</dimen>
+    <dimen name="txt_header">14sp</dimen>
+    <dimen name="small_padding">10dp</dimen>
 
 
 </resources>
