Login screen completed

--- a/app/src/main/res/layout/country_custom_spinner.xml
+++ b/app/src/main/res/layout/country_custom_spinner.xml
@@ -28,12 +28,11 @@
             tools:src="@mipmap/ic_launcher" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/appCompatTextView"
-            android:layout_width="90dp"
+            android:id="@+id/txtCountryName"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:text="@{adapterdata.name}"
             android:textSize="18dp"
-            android:textAlignment="center"
+            android:layout_marginLeft="@dimen/very_small_margin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/product_attribute_spinner_row_item_image_view"
 
