--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,8 +29,8 @@
         android:layout_height="wrap_content"
         app:errorMsg='@{"Cannot be empty"}'
         app:validation='@{ValidationRule.EMAIL_RULE}'
-
-
+        android:layout_marginLeft="@dimen/medium_margin"
+        android:layout_marginRight="@dimen/medium_margin"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +49,9 @@
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/medium_margin"
+        android:layout_marginRight="@dimen/medium_margin"
+        android:layout_marginTop="@dimen/small_margin_between_views"
         app:errorMsg='@{"Cannot be empty"}'
         app:validation='@{ValidationRule.PASSWORD_RULE}'
         app:layout_constraintTop_toBottomOf="@+id/etUserName"
@@ -70,8 +73,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/login_label"
-        android:layout_marginTop="@dimen/medium_margin"
-
+        android:layout_margin="@dimen/medium_margin"
         app:layout_constraintTop_toBottomOf="@+id/etPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +86,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.85"/>
+        app:layout_constraintGuide_percent="0.75"/>
 
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -92,18 +94,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/select_country_operation"
-        android:layout_marginBottom="@dimen/medium_margin"
+        android:layout_marginTop="@dimen/big_margin"
+        android:layout_marginLeft="@dimen/medium_margin"
+        android:layout_marginRight="@dimen/medium_margin"
         android:textColor="@color/colorBlue"
-        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal"
+        app:layout_constraintTop_toBottomOf="@id/btnLogin"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/spnrCountry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_margin="@dimen/small_margin"
         android:spinnerMode="dropdown"
-        android:paddingStart="4dp"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@+id/choseCountrylabel"
         app:layout_constraintStart_toStartOf="parent"
