--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="big_margin">16dp </dimen>
     <dimen name="medium_margin">16dp </dimen>
     <dimen name="small_margin">8dp</dimen>
     <dimen name="small_margin_between_views">4dp</dimen>
-    <dimen name="very_small_margin">4dp</dimen>
+    <dimen name="very_small_margin">2dp</dimen>
     <dimen name="txt_big_size">22sp</dimen>
     <dimen name="txt_header">18sp</dimen>
     <dimen name="small_padding">10dp</dimen>
