--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,18 +101,16 @@
         app:layout_constraintTop_toBottomOf="@id/btnLogin"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatSpinner
+    <Spinner
         android:id="@+id/spnrCountry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_margin="@dimen/small_margin"
-        android:spinnerMode="dropdown"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@+id/choseCountrylabel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:entries="@{viewModel.countryItem}" />
+       app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:entries="@{viewModel.countryItem}"
+        android:spinnerMode="dropdown"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
