--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cargif"
     tools:context=".ui.login.LoginActivity">
 
 
@@ -27,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.25"/>
+        app:layout_constraintGuide_percent="0.2"/>
 
 
 
@@ -108,20 +107,20 @@
         android:layout_marginLeft="@dimen/medium_margin"
         android:layout_marginRight="@dimen/medium_margin"
         android:textColor="@color/colorBlue"
+        android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/btnLogin"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
         android:id="@+id/spnrCountry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:spinnerMode="dropdown"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@+id/choseCountrylabel"
-       app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:entries="@{viewModel.countryItem}"
-        android:spinnerMode="dropdown"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/choseCountrylabel" />
 
     <ProgressBar
         android:id="@+id/progressBar"
