--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,6 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/username_label"
+            android:singleLine="true"
             android:text="@={viewModel.emailAddress}" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -70,6 +71,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password_label"
+            android:singleLine="true"
+            android:maxLength="15"
             android:text="@={viewModel.password}" />
     </com.google.android.material.textfield.TextInputLayout>
 
