--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -123,7 +123,8 @@
         android:id="@+id/viewSeperator"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        app:layout_constraintTop_toBottomOf="@id/guidelineaddressHorizontal"
+        android:layout_marginTop="@dimen/medium_margin"
+        app:layout_constraintTop_toBottomOf="@id/button2"
         android:background="@color/colorBlack" />
 
     <androidx.appcompat.widget.AppCompatTextView
